--- a/about.Rmd
+++ b/about.Rmd
@@ -31,13 +31,12 @@ title: "Markus Stetter"
 - 2018 - 2019 DFG research fellowship
 - 2011 - 2013 KWS scholarship for students in plant breeding
 
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
 <script>
-  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-  m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-  })(window,document,'script','https://www.google-analytics.com/analytics.js','ga');
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-  ga('create', 'UA-96594188-1', 'auto');
-  ga('send', 'pageview');
-
+  gtag('config', 'UA-96594188-4');
 </script>
