--- a/news.Rmd
+++ b/news.Rmd
@@ -9,3 +9,15 @@ title: "News"
 
 
 <a class="twitter-timeline" href="https://twitter.com/MGStetter?ref_src=twsrc%5Etfw">Tweets by MGStetter</a> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-96594188-4');
+</script>
