--- a/people.Rmd
+++ b/people.Rmd
@@ -46,3 +46,14 @@ Contact me if you are interested in joining the lab. [contact me](mailto:mgstett
 <br>
 <!-- break -->
 
+
+
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-96594188-4"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'UA-96594188-4');
+</script>
