--- a/reading.Rmd
+++ b/reading.Rmd
@@ -4,7 +4,7 @@ title: "What we read"
 &nbsp;
 
 This page is intended for our future weekly journal club. 
-The format for this journal club will probably be informal in a bar or coffee place with open discussion on the paper and beyond in a relaxed atmosphere. 
+The format for this journal club will probably be informal in a coffee place or pub with open discussion on the paper and beyond in a relaxed atmosphere. 
 Anybody will be invited to join us.
 Until this (imaginary) journal club actually exists I will try to put up a weekly paper that I would suggest.
 
