--- a/reading.Rmd
+++ b/reading.Rmd
@@ -6,10 +6,15 @@ title: "What we read"
 This page is intended for our future weekly journal club. 
 The format for this journal club will probably be informal in a coffee place or pub with open discussion on the paper and beyond in a relaxed atmosphere. 
 Anybody will be invited to join us.
-Until this (for now virtual) journal club actually exists I will try to put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.
+Until this journal club actually exists (starting in March 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.
 
 ### December 
-#### Thursday November 15
+
+
+#### Thursday December 20
+[Shah et al preprint](https://www.biorxiv.org/content/biorxiv/early/2018/12/04/485789.full.pdf) Extreme genetic signatures of local adaptation during plant colonization
+
+#### Thursday December 13
 [Weng et al 2018](http://www.genetics.org/content/early/2018/12/04/genetics.118.301721) Fine-Grained Analysis of Spontaneous Mutation Spectrum and Frequency in Arabidopsis thaliana
 
 #### Thursday December 6
