job offer added

--- a/news.Rmd
+++ b/news.Rmd
@@ -3,8 +3,8 @@ title: "News"
 ---
 &nbsp;
 
-
-- November 27 lab website comes to life
+- **December 20** Open PhD student position in the lab [read more](files/phd_offer2018.pdf)
+- **November 27** lab website comes to life
 
 
 
