--- a/people.Rmd
+++ b/people.Rmd
@@ -2,6 +2,8 @@
 title: "Current lab members"
 ---
 
+**Open Position** [read more](files/phd_offer2018.pdf)
+
 Please contact us if you are interested in joining the lab.
 
 
