--- a/reading.Rmd
+++ b/reading.Rmd
@@ -8,8 +8,14 @@ The format for this journal club will probably be informal in a coffee place or 
 Anybody will be invited to join us.
 Until this journal club actually exists (starting in March 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.
 
-### December 
+### January 
+#### Thursday December 3
+[Kistler et al preprint](http://science.sciencemag.org/content/362/6420/1309) Multiproxy evidence highlights a complex evolutionary legacy of maize in South America
 
+## 2018
+### December 
+#### Thursday December 27
+[Kreiner et al preprint](https://www.biorxiv.org/content/early/2018/12/17/498519) Multiple modes of convergent adaptation in the spread of glyphosate-resistant Amaranthus tuberculatus
 
 #### Thursday December 20
 [Shah et al preprint](https://www.biorxiv.org/content/biorxiv/early/2018/12/04/485789.full.pdf) Extreme genetic signatures of local adaptation during plant colonization
