--- a/reading.Rmd
+++ b/reading.Rmd
@@ -10,7 +10,7 @@ Until this journal club actually exists (starting in March 2019) I will put up a
 
 ### January 
 #### Thursday December 3
-[Kistler et al preprint](http://science.sciencemag.org/content/362/6420/1309) Multiproxy evidence highlights a complex evolutionary legacy of maize in South America
+[Kistler et al 2018](http://science.sciencemag.org/content/362/6420/1309) Multiproxy evidence highlights a complex evolutionary legacy of maize in South America
 
 ## 2018
 ### December 
