--- a/reading.Rmd
+++ b/reading.Rmd
@@ -9,7 +9,10 @@ Anybody will be invited to join us.
 Until this journal club actually exists (starting in March 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.
 
 ### January 
-#### Thursday December 3
+#### Thursday January 10
+[Schwarzkopf, et al preprint](https://www.biorxiv.org/content/early/2018/11/29/482299) Genetic differentiation and intrinsic genomic features explain variation in recombination hotspots among cocoa tree populations
+
+#### Thursday January 3
 [Kistler et al 2018](http://science.sciencemag.org/content/362/6420/1309) Multiproxy evidence highlights a complex evolutionary legacy of maize in South America
 
 ## 2018
