--- a/reading.Rmd
+++ b/reading.Rmd
@@ -9,6 +9,8 @@ Anybody will be invited to join us.
 Until this journal club actually exists (starting in March 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.
 
 ### January 
+#### Thursday January 31
+[Albert, et al 2019](https://www.pnas.org/content/116/5/1679) Whole-chromosome paints in maize reveal rearrangements, nuclear domains, and chromosomal relationships
 
 #### Thursday January 24
 [Ashander, et al preprint](https://www.biorxiv.org/content/early/2018/06/23/354530) Demographic inference in a spatially-explicit ecological model from genomic data: a proof of concept for the Mojave Desert Tortoise
