--- a/reading.Rmd
+++ b/reading.Rmd
@@ -8,6 +8,10 @@ The format for this journal club will probably be informal in a coffee place or 
 Anybody will be invited to join us.
 Until this journal club actually exists (starting in March 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.
 
+### February 
+#### Thursday February 7
+[Chen, et al 2019](https://www.pnas.org/content/116/6/2158) Allele frequency dynamics in a pedigreed natural population
+
 ### January 
 #### Thursday January 31
 [Albert, et al 2019](https://www.pnas.org/content/116/5/1679) Whole-chromosome paints in maize reveal rearrangements, nuclear domains, and chromosomal relationships
