--- a/contact.Rmd
+++ b/contact.Rmd
@@ -8,14 +8,15 @@ title: "Contact Us"
 </div>
 
 **Markus Stetter**    
-Dept. of Plant Sciences  
-262 Robbins Hall, Mail Stop 4  
-University of California  
-One Shields Ave  
-Davis, CA 95616  
-mail: [mstetter(a)ucdavis.edu](mailto:mstetter@ucdavis.edu)  
+University of Cologne
+Crop Evolution
+Botanical Institute
+Biozentrum
+Zülpicher Str. 47b
+50674 Cologne/Germany
+mail: [m.stetter(a)uni-koeln.de](mailto:m.stetter@uni-koeln.de)  
 twitter: [\@mgstetter](https://twitter.com/mgstetter)  
-web: [mstetter.github.io](https://mstetter.github.io)
+web: [cropevolution.org](https://cropevolution.org)
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
