--- a/reading.Rmd
+++ b/reading.Rmd
@@ -8,6 +8,11 @@ The format for this journal club will probably be informal in a coffee place or 
 Anybody will be invited to join us.
 Until this journal club actually exists (starting late April 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.
 
+### April 
+
+#### Thursday April 4
+[Xue et al preprint](https://www.biorxiv.org/content/10.1101/588715v1) Hybrid decay: a transgenerational epigenetic decline in vigor and viability triggered in backcross populations of teosinte with maize
+
 ### March 
 
 #### Thursday March 28
