--- a/people.Rmd
+++ b/people.Rmd
@@ -30,6 +30,25 @@ Building a lab and trying to do cool science  [read more](about.html)
 
 
 <div style="float: left">
+<img src="own_images/people/catia.jpg" style="width: 100px ;border:10px solid white">
+</div>
+
+**Cátia José Neves** 
+<div style="float: left">
+</div>
+Cátia is visting the lab to study the evolution of diocey in Amaranthus
+<!-- break -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<!-- break -->
+
+<div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
 </div>
 
