--- a/reading.Rmd
+++ b/reading.Rmd
@@ -10,6 +10,11 @@ Until this journal club actually exists (starting late April 2019) I will put up
 
 ### April 
 
+
+
+#### Thursday April 18
+[Roessler et al preprint](https://www.biorxiv.org/content/10.1101/594812v1) The Genomics of Selfing in Maize (Zea mays ssp. mays): Catching Purging in the Act
+
 #### Thursday April 4
 [Xue et al preprint](https://www.biorxiv.org/content/10.1101/588715v1) Hybrid decay: a transgenerational epigenetic decline in vigor and viability triggered in backcross populations of teosinte with maize
 
