--- a/contact.Rmd
+++ b/contact.Rmd
@@ -1,22 +1,19 @@
 ---
 title: "Contact Us"
 ---
-  
 
-<div style="float: left">  
-</a><img src="own_images/me_2016.jpg" style="border:10px solid white"; width=200px>
-</div>
 
-**Markus Stetter**    
-University of Cologne
-Crop Evolution
-Botanical Institute
-Biozentrum
-Zülpicher Str. 47b
-50674 Cologne/Germany
+**Dr. Markus Stetter**   
+
+University of Cologne  
+Crop Evolution  
+Botanical Institute  
+Biozentrum  
+Zülpicher Str. 47b  
+50674 Cologne/Germany  
 mail: [m.stetter(a)uni-koeln.de](mailto:m.stetter@uni-koeln.de)  
 twitter: [\@mgstetter](https://twitter.com/mgstetter)  
-web: [cropevolution.org](https://cropevolution.org)
+web: [cropevolution.org](https://cropevolution.org)  
 
 
 <!-- Global site tag (gtag.js) - Google Analytics -->
