--- a/reading.Rmd
+++ b/reading.Rmd
@@ -3,13 +3,22 @@ title: "What we read"
 ---
 &nbsp;
 
-This page is intended for our future weekly journal club. 
-The format for this journal club will probably be informal in a coffee place or pub with open discussion on the paper and beyond in a relaxed atmosphere. 
-Anybody will be invited to join us.
-Until this journal club actually exists (starting late April 2019) I will put up a weekly paper that I would suggest, feel free to email me for discssion, questions or suggesions.
+C.R.O.P is our weekly journal club for anyone interested in evolution. 
+We meet on Thursdays at 4 pm at [Magnus](https://goo.gl/maps/HTsuGbneog1P3uWs5) for an open discussion about the weekly paper in a relaxed atmosphere. 
+Anybody is welcome to join us.
+The idea is that everyone reads the paper before and we dive directly in without formal presentation of the paper. 
+If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
+
+### June 
+
+#### Thursday June 6
+[ Stankowski et al preprint](https://www.biorxiv.org/content/10.1101/342352v3) Widespread selection and gene flow shape the genomic landscape during a radiation of monkeyflowers
+
+### May
+
+We took a little break to set up the lab and find a place
 
 ### April 
-
 
 
 #### Thursday April 18
