--- a/people.Rmd
+++ b/people.Rmd
@@ -87,8 +87,25 @@ Sophie is a biology undergraduate student doing her thesis research in the lab. 
 <br>
 
 <!-- break -->
+<div style="float: left">
+<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+</div>
 
+**Tom Winkler** 
+<div style="float: left">
+</div>
 
+Tom is a biology undergraduate student conducting his thesis research in the lab. He is identifying transcription factor families in _Amaranthus_ and related species.
+<!-- break -->
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+<br>
+
+<!-- break -->
 
 <div style="float: left">
 <img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
