--- a/people.Rmd
+++ b/people.Rmd
@@ -88,7 +88,7 @@ Sophie is a biology undergraduate student doing her thesis research in the lab. 
 
 <!-- break -->
 <div style="float: left">
-<img src="own_images/DSC_0020.jpg" style="width: 100px ;border:10px solid white">
+<img src="own_images/people/tom.jpg" style="width: 100px ;border:10px solid white">
 </div>
 
 **Tom Winkler** 
