--- a/people.Rmd
+++ b/people.Rmd
@@ -54,7 +54,7 @@ José is a PhD student studying introgression during grain amaranth domesticatio
 **Cátia José Neves** 
 <div style="float: left">
 </div>
-Cátia is visting the lab to study the evolution of diocey in Amaranthus
+Cátia is visting the lab to study the evolution of dioecy in Amaranthus
 <!-- break -->
 <br>
 <br>
