--- a/reading.Rmd
+++ b/reading.Rmd
@@ -10,6 +10,11 @@ The idea is that everyone reads the paper before and we dive directly in without
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
 ### August
+
+#### Thursday August 8
+[Therkildsen et al 2019](https://science.sciencemag.org/content/365/6452/487)
+Contrasting genomic shifts underlie parallel phenotypic evolution in response to fishing
+
 #### Thursday August 1
 [Apuli et al preprint](https://www.biorxiv.org/content/biorxiv/early/2019/06/10/664037.full.pdf)
 Constructing a high-density linkage map to infer the genomic landscape of recombination rate variation in European Aspen (Populus tremula) 
