--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,12 +12,12 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 ### August
 
 #### Thursday August 22
-[Christodoulaki et al preprint](https://www.biorxiv.org/content/10.1101/732750v2)
+[Christodoulaki et al preprint](https://www.biorxiv.org/content/10.1101/721340v1.full)
 Distance to trait optimum is a crucial factor determining the genomic signature of polygenic adaptation
 
 
 #### Thursday August 15
-[Rougemont et al preprint](https://www.biorxiv.org/content/10.1101/721340v1.full)
+[Rougemont et al preprint](https://www.biorxiv.org/content/10.1101/732750v2)
 Demographic history, linked selection, and recombination shape the genomic landscape of a broadly distributed Pacific salmon.
 
 #### Thursday August 8
