--- a/news.Rmd
+++ b/news.Rmd
@@ -2,8 +2,10 @@
 title: "News"
 ---
 &nbsp;
-
-- **March 1** We are officially open for business  
+- **September 15 -25** Markus participates in a visit to Beijing, Nanjing and Shanghai presenting work from the lab  
+- **September 15** Jose presenting a poster at the [meeting of the German Botanical Society](https://www.botanikertagung2019.de/)  
+- **June 19** Markus Presenting at CEPLAS meeting in Duesseldorf  
+- **March 1** We are officially open for business   
 - **February 13** New preprint online. Read it [here](https://www.biorxiv.org/content/10.1101/547943v1)  
 - **December 20** Open PhD student position in the lab [read more](files/phd_offer2018.pdf)  
 - **November 27** lab website comes to life  
