--- a/reading.Rmd
+++ b/reading.Rmd
@@ -12,6 +12,11 @@ If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-
 
 ### September
 
+#### Thursday September 26
+No C.R.O.P
+
+#### Thursday September 19
+No C.R.O.P
 
 #### Thursday September 12
 [Exposito-Alonso et al 2019](https://www.nature.com/articles/s41586-019-1520-9)
