new CROP papers

--- a/news.Rmd
+++ b/news.Rmd
@@ -2,9 +2,12 @@
 title: "News"
 ---
 &nbsp;
+
+- **September 30** Sophie successfully defended her thesis. Congrats
 - **September 15 -25** Markus participates in a visit to Beijing, Nanjing and Shanghai presenting work from the lab  
 - **September 15** Jose presenting a poster at the [meeting of the German Botanical Society](https://www.botanikertagung2019.de/)  
 - **June 19** Markus Presenting at CEPLAS meeting in Duesseldorf  
+- **April 15** Welcome Jose Dias as PhD student in the lab
 - **March 1** We are officially open for business   
 - **February 13** New preprint online. Read it [here](https://www.biorxiv.org/content/10.1101/547943v1)  
 - **December 20** Open PhD student position in the lab [read more](files/phd_offer2018.pdf)  
