--- a/reading.Rmd
+++ b/reading.Rmd
@@ -10,6 +10,23 @@ The idea is that everyone reads the paper before and we dive directly in without
 If you would like to suggest a paper please email [Markus](mailto:m.stetter@uni-koeln.de).
 
 
+### October
+
+#### Thursday October 24
+[Samuk et al preprint](https://www.biorxiv.org/content/10.1101/787382v1)
+Natural selection shapes variation in genome-wide recombination rate in Drosophila pseudoobscura
+
+#### Thursday October 17
+[Rojas-Barrera et al 2019](https://www.pnas.org/content/early/2019/09/26/1817664116)
+Contemporary evolution of maize landraces and their wild relatives influenced by gene flow with modern maize varieties
+
+#### Thursday October 10
+[Todesco et al preprint](https://www.biorxiv.org/content/10.1101/790279v1)
+Massive haplotypes underlie ecotypic differentiation in sunflowers
+
+#### Thursday October 3
+Holiday - No C.R.O.P
+
 ### September
 
 #### Thursday September 26
