edit people and CROP

--- a/news.Rmd
+++ b/news.Rmd
@@ -3,6 +3,7 @@ title: "News"
 ---
 &nbsp;
 
+- **November 12** Tom submitted his thesis. Congrats
 - **September 30** Sophie successfully defended her thesis. Congrats
 - **September 15 -25** Markus participates in a visit to Beijing, Nanjing and Shanghai presenting work from the lab  
 - **September 15** Jose presenting a poster at the [meeting of the German Botanical Society](https://www.botanikertagung2019.de/)  
